5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1807_2572.log
== TEST (2019-06-06 17:37:08) 
-- CODE:
from numpy import*
NM = array(eval(input("Numero de Matricula do Aluno: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:39:24) 
-- CODE:
from numpy import*
NM = array(eval(input("Numero de Matricula do Aluno: ")))
grupo2 = zeros(8, dtype = int)

for i in (size(NM))

-- ERROR:
File "XXXX", line 5
    for i in (size(NM))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:40:34) 
-- CODE:
from numpy import*
NM = array(eval(input("Numero de Matricula do Aluno: ")))
grupo2 = zeros(8, dtype = int)

for i in (size(NM)):
	while(NM [-1] = %2 == 0)

-- ERROR:
File "XXXX", line 6
    while(NM [-1] = %2 == 0)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:40:37) 
-- CODE:
from numpy import*
NM = array(eval(input("Numero de Matricula do Aluno: ")))
grupo2 = zeros(8, dtype = int)

for i in (size(NM)):
	while(NM [-1] = %2 == 0):
		

-- ERROR:
File "XXXX", line 6
    while(NM [-1] = %2 == 0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:40:48) 
-- CODE:
from numpy import*
NM = array(eval(input("Numero de Matricula do Aluno: ")))
grupo2 = zeros(8, dtype = int)

for i in (size(NM)):
	while(NM [-1] = (%2 == 0)):
		

-- ERROR:
File "XXXX", line 6
    while(NM [-1] = (%2 == 0)):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:40:59) 
-- CODE:
from numpy import*
NM = array(eval(input("Numero de Matricula do Aluno: ")))
grupo2 = zeros(8, dtype = int)

for i in (size(NM)):
	while(NM [7] = ( %2 == 0)):
		

-- ERROR:
File "XXXX", line 6
    while(NM [7] = ( %2 == 0)):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:43:48) 
-- CODE:
from numpy import*
NM = array(eval(input("Numero de Matricula do Aluno: ")))
grupo2 = zeros(8, dtype = int)


for i in (size(NM)):
	while(NM = (% 2 == 0)
		

-- ERROR:
File "XXXX", line 7
    while(NM = (% 2 == 0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:43:51) 
-- CODE:
from numpy import*
NM = array(eval(input("Numero de Matricula do Aluno: ")))
grupo2 = zeros(8, dtype = int)


for i in (size(NM)):
	while(NM = (% 2 == 0):
			
		

-- ERROR:
File "XXXX", line 7
    while(NM = (% 2 == 0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:48:43) 
-- CODE:
from numpy import*
NM = array(eval(input("Numero de Matricula do Aluno: ")))
grupo2 = zeros(8, dtype = int)


for i in (size(NM)):
	while(i % 2 == 0):
			
		

-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:49:53) 
-- CODE:
from numpy import*
NM = array(eval(input("Numero de Matricula do Aluno: ")))
grupo2 = zeros(8, dtype = int)


for i in (size(NM)):
	while(i % 2 == 0):
		print(grupo2)
		grupo2 = grupo2 + 1
		
		
			
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:50:51) 
-- CODE:
from numpy import*
NM = array(eval(input("Numero de Matricula do Aluno: ")))
grupo2 = zeros(8, dtype = int)


for i in (size(NM)):
	while(i % 2 == 1):
		print(grupo2)
		grupo2 = grupo2 + 1
		
		
			
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:51:33) 
-- CODE:
from numpy import*
NM = array(eval(input("Numero de Matricula do Aluno: ")))
grupo2 = zeros(8, dtype=int)


for i in (size(NM)):
	while(i % 2 == 1):
		print(grupo2)
		grupo2 = grupo2 + 1
		
		
			
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:52:50) 
-- CODE:
from numpy import*
NM = array(eval(input("Numero de Matricula do Aluno: ")))
grupo2 = zeros(8, dtype=int)


for i in (size(NM)):
	while(i % 2 == 1):
		print (array(grupo2))
		grupo2 = grupo2 + 1
		
		
			
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:53:09) 
-- CODE:
from numpy import*
NM = array(eval(input("Numero de Matricula do Aluno: ")))
grupo2 = zeros(8, dtype=int)


for i in (size(7, NM)):
	while(i % 2 == 1):
		print (array(grupo2))
		grupo2 = grupo2 + 1
		
		
			
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 07:47:25) 
-- CODE:
from numpy import*
N_matriculas = array(

impar = 0
for i in range(0,size(N_matriculas)):
	if(N_matriculas[i] % 2 == 1 ):
		impar = impar + 1
		
grupo_2 = zeros(impar, dtype=int)
iN = 0
for i in range(0,size(N_matriculas)):
	if(N_matriculas[i] % 2 == 1):
		if(iN < size(grupo_2)):
			grupo_2[iN] = N_matriculas[i]
			iN = iN + 1
print(grupo_2)
		
			
		

-- ERROR:
File "XXXX", line 5
    for i in range(0,size(N_matriculas)):
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 07:47:54) 
-- CODE:
from numpy import*
N_matriculas = array(eval(input("Matriculas:"))

impar = 0
for i in range(0,size(N_matriculas)):
	if(N_matriculas[i] % 2 == 1 ):
		impar = impar + 1
		
grupo_2 = zeros(impar, dtype=int)
iN = 0
for i in range(0,size(N_matriculas)):
	if(N_matriculas[i] % 2 == 1):
		if(iN < size(grupo_2)):
			grupo_2[iN] = N_matriculas[i]
			iN = iN + 1
print(grupo_2)
		
			
		

-- ERROR:
File "XXXX", line 4
    impar = 0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 07:48:03) 
-- CODE:
from numpy import*
N_matriculas = array(eval(input("Matriculas:")))

impar = 0
for i in range(0,size(N_matriculas)):
	if(N_matriculas[i] % 2 == 1 ):
		impar = impar + 1
		
grupo_2 = zeros(impar, dtype=int)
iN = 0
for i in range(0,size(N_matriculas)):
	if(N_matriculas[i] % 2 == 1):
		if(iN < size(grupo_2)):
			grupo_2[iN] = N_matriculas[i]
			iN = iN + 1
print(grupo_2)
		
			
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 07:48:29) 
-- CODE:
from numpy import*
N_matriculas = array(eval(input("Matriculas:")))

impar = 0
for i in range(0,size(N_matriculas)):
	if(N_matriculas[i] % 2 == 1 ):
		impar = impar + 1
		
grupo_2 = zeros(impar, dtype=int)
iN = 0
for i in range(0,size(N_matriculas)):
	if(N_matriculas[i] % 2 == 1):
		if(iN < size(grupo_2)):
			grupo_2[iN] = N_matriculas[i]
			iN = iN + 1
print(grupo_2)
		
			
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 07:48:57) 
-- CODE:
from numpy import*
N_matriculas = array(eval(input("Matriculas:")))

impar = 0
for i in range(0,size(N_matriculas)):
	if(N_matriculas[i] % 2 == 1 ):
		impar = impar + 1
		
grupo_2 = zeros(impar, dtype=int)
iN = 0
for i in range(0,size(N_matriculas)):
	if(N_matriculas[i] % 2 == 1):
		if(iN < size(grupo_2)):
			grupo_2[iN] = N_matriculas[i]
			iN = iN + 1
print(grupo_2)
		
			
		

-- EXECUTION TIME:
1.15002
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 06:35:22) 
-- CODE:
from numpy import*
N_matriculas = array(eval(input("Matriculas:")))

impar = 0
for i in range(0,size(N_matriculas)):
	if(N_matriculas[i] % 2 == 1 ):
		impar = impar + 1
		
grupo_2 = zeros(impar, dtype=int)
iN = 0
for i in range(0,size(N_matriculas)):
	if(N_matriculas[i] % 2 == 1):
		if(iN < size(grupo_2)):
			grupo_2[iN] = N_matriculas[i]
			iN = iN + 1
print(grupo_2)
		
			
		

-- EXECUTION TIME:
1.10621
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
